--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,35 +1,35 @@
 pipeline {
-  agent any
+agent any
 
-  environment {
-    AWS_DEFAULT_REGION = 'us-east-1'
-  }
+environment {
+AWS_DEFAULT_REGION = 'us-east-1'
+}
 
-  stages {
+stages {
 
-    stage('Checkout') {
-      steps {
-        git 'https://github.com/Pranav0409-git/aws-infra-automation.git'
-      }
-    }
-
-    stage('Terraform Init') {
-      steps {
-        sh 'terraform init'
-      }
-    }
-
-    stage('Terraform Plan') {
-      steps {
-        sh 'terraform plan'
-      }
-    }
-
-    stage('Terraform Apply') {
-      steps {
-        sh 'terraform apply -auto-approve'
-      }
+stage('Terraform Init') {
+  steps {
+    withAWS(credentials: 'aws-creds', region: 'us-east-1') {
+      sh 'terraform init'
     }
   }
 }
 
+stage('Terraform Plan') {
+  steps {
+    withAWS(credentials: 'aws-creds', region: 'us-east-1') {
+      sh 'terraform plan'
+    }
+  }
+}
+
+stage('Terraform Apply') {
+  steps {
+    withAWS(credentials: 'aws-creds', region: 'us-east-1') {
+      sh 'terraform apply -auto-approve'
+    }
+  }
+}
+
+}
+}
