--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ stages {
 
 stage('Terraform Init') {
   steps {
-    withAWS(credentials: 'aws-creds', region: 'us-east-1') {
+    withAWS(credentials: 'aws-cred', region: 'us-east-1') {
       sh 'terraform init'
     }
   }
@@ -17,7 +17,7 @@ stage('Terraform Init') {
 
 stage('Terraform Plan') {
   steps {
-    withAWS(credentials: 'aws-creds', region: 'us-east-1') {
+    withAWS(credentials: 'aws-cred', region: 'us-east-1') {
       sh 'terraform plan'
     }
   }
@@ -25,7 +25,7 @@ stage('Terraform Plan') {
 
 stage('Terraform Apply') {
   steps {
-    withAWS(credentials: 'aws-creds', region: 'us-east-1') {
+    withAWS(credentials: 'aws-cred', region: 'us-east-1') {
       sh 'terraform apply -auto-approve'
     }
   }
